# swissarmyhammer

./: .gitignore  .gitmodules  .mcp.json  .reviewignore  ARCHITECTURE.md  CACHE_INVESTIGATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_RECORDING_TODO.md  CRITICAL_llama_agent_deficiencies.md  Cargo.toml  FINAL_STATUS.md  FINAL_SUMMARY.md  FIXTURE_STATUS.md  FIXTURE_SYSTEM.md  LICENSE-APACHE  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  SERIAL_TESTS.md  SESSION_SUMMARY.md  acp_analysis.md  build-setup.sh  dist-workspace.toml  initialization_compliance_verification.md  initialization_consistency_report.md  justfile  llama_agent_fixes_summary.md  package.json  sah.toml  session_setup_compliance_verification.md  tarpaulin.toml  test_boolean_schema.rs  tsup.config.ts
acp-conformance/: Cargo.toml  README.md  RECORD_PLAYBACK.md  STATUS.md
acp-conformance/src/: agent_plan.rs  client.rs  content.rs  ext_method.rs  file_system.rs  initialization.rs  lib.rs  prompt_turn.rs  responses.rs  sessions.rs  slash_commands.rs  terminals.rs  test_utils.rs  tool_calls.rs  validation.rs
acp-conformance/tests/: agent_fixtures.rs  agent_plan_test.rs  content_test.rs  file_system_test.rs  initialization_test.rs  llama_agent_initialization_test.rs  llama_agent_sessions_test.rs  prompt_turn_extended_test.rs  prompt_turn_test.rs  sessions_test.rs  slash_commands_test.rs  terminals_test.rs  tool_calls_test.rs
agent-client-protocol-extras/: Cargo.toml
agent-client-protocol-extras/src/: fixture.rs  hook_config.rs  hookable_agent.rs  lib.rs  playback.rs  recording.rs  test_mcp_server.rs  tracing_agent.rs
agent-client-protocol-extras/tests/: recording_with_notifications.rs
ane-embedding/: Cargo.toml
ane-embedding/convert/: convert_embedding.py  convert_embeddinggemma.py  convert_jina_embedding.py  convert_nomic_embedding.py  convert_qwen_embedding.py
ane-embedding/src/: coreml.rs  error.rs  lib.rs  model.rs  types.rs
ane-embedding/tests/: coreml_test.rs  integration_test.rs
avp-cli/: Cargo.toml  README.md  build.rs
avp-cli/src/: auth.rs  banner.rs  cli.rs  doctor.rs  edit.rs  error.rs  info.rs  install.rs  lib.rs  list.rs  logging.rs  main.rs  new.rs  outdated.rs  package.rs  publish.rs  search.rs
avp-cli/tests/: completion.rs
avp-common/: Cargo.toml  build.rs
avp-common/src/: context.rs  error.rs  install.rs  lib.rs  lockfile.rs
avp-common/tests/: hook_output_json_format.rs  model_config_integration.rs  no_secrets_integration.rs  no_test_cheating_integration.rs  post_tool_use_integration.rs  pre_tool_use_integration.rs  recording_replay_integration.rs  ruleset_integration.rs  safe_commands_integration.rs  stop_hook_code_quality_regression.rs  stop_hook_prompt_content_integration.rs  stop_validators_integration.rs  test_helpers.rs  validator_block_e2e_integration.rs  validator_loader_integration.rs  validator_tools_integration.rs  validator_tools_partial_integration.rs
claude-agent/: COMPLETE_STATUS.md  CONFORMANCE_INTEGRATION.md  Cargo.toml  RECORDED_TESTS.md
claude-agent/src/: acp_error_conversion.rs  agent.rs  agent_cancellation.rs  agent_commands.rs  agent_file_handlers.rs  agent_file_operations.rs  agent_notifications.rs  agent_permissions.rs  agent_prompt_handling.rs  agent_raw_messages.rs  agent_reasoning.rs  agent_terminal_handlers.rs  agent_todo_handlers.rs  agent_trait_impl.rs  agent_validation.rs  base64_processor.rs  base64_validation.rs  capability_validation.rs  claude.rs  claude_backend.rs  claude_process.rs  config.rs  content_block_processor.rs  content_capability_validator.rs  content_security_integration_tests.rs  content_security_validator.rs  conversation_manager.rs  editor_state.rs  error.rs  json_rpc_codes.rs  lib.rs  mcp.rs  mcp_error_handling.rs  mime_type_validator.rs  path_validator.rs  permission_storage.rs  permissions.rs  plan.rs  protocol_translator.rs  request_validation.rs  (+12 more)
claude-agent/tests/: concurrent_session_test.rs  conversation_manager_streaming_test.rs  file_operations_in_conversation_test.rs  integration_tests.rs  long_conversation_test.rs  path_validator_attack_vectors_test.rs  path_validator_audit_logging_test.rs  path_validator_test.rs  plan_integration_test.rs  session_persistence_test.rs  terminal_rate_limiting_test.rs  test_immediate_response_recorded.rs  test_message_duplication_recorded.rs  test_prompt_recorded.rs  test_slash_commands_from_init.rs  test_slash_commands_from_init_recorded.rs  test_tool_call_flow_recorded.rs  test_tool_completion_real.rs  test_tool_completion_recorded.rs  todo_sync_integration_test.rs  tool_call_permissions_test.rs  tool_results_in_conversation_test.rs  user_approval_flow_test.rs
code-context-cli/: .mcp.json  Cargo.toml  README.md  build.rs
code-context-cli/src/: banner.rs  cli.rs  completions.rs  doctor.rs  main.rs  ops.rs  progress.rs  registry.rs  serve.rs  skill.rs
code-context-cli/tests/: completion.rs  rebuild_index_e2e.rs
heb/: Cargo.toml
heb/src/: context.rs  error.rs  event.rs  header.rs  lib.rs  store.rs
heb/tests/: integration.rs
kanban-app/: Cargo.toml  README.md  entitlements.plist  package.json  tauri.conf.json  tsconfig.json  wdio.conf.ts
kanban-app/capabilities/: default.json
kanban-app/e2e/: setup.ts  (+1 more)
kanban-cli/: .mcp.json  Cargo.toml  README.md  build.rs
llama-agent/: Cargo.toml  README.md
llama-common/: Cargo.toml
llama-embedding/: Cargo.toml
llama-loader/: Cargo.toml
markdowndown/: Cargo.toml
mcp-bridge/: Cargo.toml
mirdan/: Cargo.toml
mirdan-app/: Cargo.toml  tauri.conf.json
mirdan-cli/: Cargo.toml  build.rs  marketplaces-seeds.yaml  plugin-marketplaces.yaml  skills-marketplaces-discovered.yaml
model-context-protocol-extras/: Cargo.toml
model-embedding/: Cargo.toml
onnxruntime-coreml-sys/: .gitignore  Cargo.toml  build.rs
sah-marker-macros/: Cargo.toml
shelltool-cli/: .mcp.json  Cargo.toml  README.md  build.rs
swissarmyhammer-agent/: Cargo.toml
swissarmyhammer-agent-executor/: Cargo.toml
swissarmyhammer-agents/: Cargo.toml  build.rs
swissarmyhammer-cel/: Cargo.toml
swissarmyhammer-cli-completions/: Cargo.toml
(+16262 files in other folders)
