# NEVER add features or feature flags to this workspace!
# SwissArmyHammer provides ALL functionality ALL the time.
# This is a SwissArmyHammer - every tool, every time!

[workspace]
members = [
    "swissarmyhammer",
    "swissarmyhammer-cli",
    "swissarmyhammer-tools",
    "swissarmyhammer-config",
    "swissarmyhammer-common",
    "swissarmyhammer-directory",
    "swissarmyhammer-build",
    "swissarmyhammer-git",
    "swissarmyhammer-shell",
    "swissarmyhammer-templating",
    "swissarmyhammer-prompts",
    "swissarmyhammer-modes",
    "swissarmyhammer-workflow",
    "swissarmyhammer-agent",
    "swissarmyhammer-mcp-proxy",
    "swissarmyhammer-js",
    "markdowndown",
    "llama-agent",
    "llama-common",
    "llama-embedding",
    "llama-loader",
    "mermaid-parser",
    "acp-conformance",
    "claude-agent",
    "agent-client-protocol-extras",
    "model-context-protocol-extras",
    "swissarmyhammer-project-detection",
    "avp-common",
    "avp-cli",
    "swissarmyhammer-doctor",
    "swissarmyhammer-treesitter",
    "swissarmyhammer-leader-election",
    "swissarmyhammer-kanban",
    "swissarmyhammer-operations",
    "swissarmyhammer-operations-macros",
    "mirdan-cli",
]
resolver = "2"

[workspace.metadata.release]
publish = false  # Don't auto-publish
shared-version = true          # All crates share the same version
tag-name = "v{{version}}"      # Single tag for workspace
consolidate-commits = true     # One commit for all version bumps

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.91.1"
authors = ["SwissArmyHammer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/swissarmyhammer/swissarmyhammer"
homepage = "https://github.com/swissarmyhammer/swissarmyhammer/blob/main/README.md"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.46", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
test-log = {version = "0.2.18" , features = ["trace"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
base64 = "0.22"

# Library core dependencies
liquid = "0.26.11"
liquid-core = "0.26"
walkdir = "2"
dashmap = "6"
regex = "1"
tantivy = "0.24"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
async-watcher = "0.3"
glob = "0.3"
ignore = "0.4"
ulid = { version = "1.2.1", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
toml = "0.9.5"
schemars = "0.8"
governor = "0.7"
nonzero_ext = "0.3"

tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-dart = "0.0"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.6"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.23"
tree-sitter-zig = "1"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
tree-sitter-sequel = "0.3"
md5 = "0.7"
fs2 = "0.4"
simsimd = "6"

# CLI specific dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap-markdown = "0.1"
clap_mangen = "0.2"
colored = "2"
owo-colors = "4"
is-terminal = "0.4"
which = "8.0"

rmcp = { version = "0.12.0", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "auth",
    "elicitation",
    "schemars",
] }
agent-client-protocol = "0.9.2"
dirs = "6.0"
rust-embed = "8"
comfy-table = "7"
crossterm = "0.29"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
arboard = "3.4"
atty = "0.2"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "cookies", "rustls-tls", "multipart"] }
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
fs_extra = "1.3"
url = "2.5"
indicatif = "0.17"
sha2 = "0.10"
futures-util = "0.3"
tempfile = "3.0"
pathdiff = "0.2"
serial_test = "3.0"
textwrap = "0.16"
csv = "1.3"
rand = "0.8"
syntect = "5.2"
once_cell = "1.20"
ouroboros = "0.18"
html2text = "0.16"
bytes = "1.0"
futures = "0.3"

# HTTP server dependencies
axum = "0.7"
tower = "0.5"
tower-http = "0.5"
hyper = "1.0"

# Web fetch dependencies
markdowndown = { path = "markdowndown" }

# Llama-agent dependencies
llama-cpp-2 = { git = "https://github.com/swissarmyhammer/llama-cpp-rs", features = ["metal", "sampler"] }
llama-agent = { path = "llama-agent" }
llama-common = { path = "llama-common" }
llama-embedding = { path = "llama-embedding" }
llama-loader = { path = "llama-loader" }

# Leader election
swissarmyhammer-leader-election = { path = "swissarmyhammer-leader-election" }

# Operations
swissarmyhammer-operations = { path = "swissarmyhammer-operations" }
swissarmyhammer-operations-macros = { path = "swissarmyhammer-operations-macros" }
num_cpus = "1.0"
process-wrap = "8.0"
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio", "rustls-tls"] }
polars = { version = "0.41.0", features = ["lazy", "parquet", "dtype-struct", "streaming"] }
jsonschema = "0.18"

# Mermaid parser
mermaid-parser = { path = "mermaid-parser" }

# Ripgrep library
grep = "0.4.1"

# Additional common dependencies
libc = "0.2"
encoding_rs = "0.8"
filetime = "0.2"
html2md = "0.2"
html-escape = "0.2"
scraper = "0.20"
urlencoding = "2.1.3"
chromiumoxide = "0.7"

# Additional crate dependencies
infer = "0.16"
typed-builder = "0.20"
nix = { version = "0.29", features = ["signal", "process"] }
include_dir = "0.7"
lru = "0.12"
rquickjs = { version = "0.11", features = ["futures", "loader"] }
swissarmyhammer-js = { path = "swissarmyhammer-js" }
chumsky = "0.10.1"
zstd = "0.13"
memmap2 = "0.9"
rayon = "1.8"
tracing-test = "0.2"
criterion = "0.5"
http = "1.1"
piper = "0.2"
tokio-test = "0.4"
ctor = "0.2"
derive_builder = "0.20"
scopeguard = "1.2"
wiremock = "0.5"
mockito = "1.2"
byte-unit = "5.1"
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }

# Dev dependencies
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
sysinfo = "0.30"
rstest = "0.26.1"
cargo-release = "0.25"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

# Profile for faster test compilation
[profile.test]
opt-level = 0       # No optimization for faster compilation
debug = 0           # No debug info for maximum speed
lto = false         # Disable link-time optimization
split-debuginfo = "unpacked"

[profile.dist]
inherits = "release"
lto = true
strip = true
