# NEVER add features or feature flags to this workspace!
# SwissArmyHammer provides ALL functionality ALL the time.
# This is a SwissArmyHammer - every tool, every time!

[workspace]
members = [
    "crates/swissarmyhammer",
    "apps/swissarmyhammer-cli",
    "crates/swissarmyhammer-tools",
    "crates/swissarmyhammer-config",
    "crates/swissarmyhammer-common",
    "crates/swissarmyhammer-directory",
    "crates/swissarmyhammer-build",
    "crates/swissarmyhammer-git",
    "crates/swissarmyhammer-shell",
    "crates/swissarmyhammer-templating",
    "crates/swissarmyhammer-prompts",
    "crates/swissarmyhammer-modes",

    "crates/swissarmyhammer-agent",
    "crates/swissarmyhammer-mcp-proxy",
    "crates/swissarmyhammer-js",
    "crates/markdowndown",
    "crates/llama-agent",
    "crates/llama-common",
    "crates/llama-embedding",
    "crates/model-loader",
    "crates/model-embedding",
    "crates/ane-embedding",
    "crates/swissarmyhammer-embedding",
    # "onnxruntime-coreml-sys",  # excluded: builds onnxruntime from source via CMake, not yet used

    "crates/acp-conformance",
    "crates/claude-agent",
    "crates/agent-client-protocol-extras",
    "crates/model-context-protocol-extras",
    "crates/swissarmyhammer-project-detection",
    "crates/avp-common",
    "apps/avp-cli",
    "crates/swissarmyhammer-doctor",
    "crates/swissarmyhammer-treesitter",
    "crates/swissarmyhammer-leader-election",
    "crates/swissarmyhammer-focus",
    "crates/swissarmyhammer-kanban",
    "crates/swissarmyhammer-lsp",
    "crates/swissarmyhammer-code-context",
    "crates/swissarmyhammer-statusline",
    "crates/swissarmyhammer-operations",
    "crates/swissarmyhammer-operations-macros",
    "crates/swissarmyhammer-skills",
    "crates/swissarmyhammer-agents",
    "crates/swissarmyhammer-web",
    "crates/mirdan",
    "apps/mirdan-cli",
    "apps/mirdan-app",
    "apps/kanban-app",
    "apps/kanban-cli",
    "crates/swissarmyhammer-fields",
    "crates/swissarmyhammer-entity",
    "crates/swissarmyhammer-entity-search",
    "crates/swissarmyhammer-views",
    "crates/swissarmyhammer-perspectives",
    "crates/swissarmyhammer-filter-expr",
    "crates/swissarmyhammer-merge",
    "crates/swissarmyhammer-store",
    "crates/swissarmyhammer-commands",
    "benches/embedding_benchmark",
    "crates/swissarmyhammer-sem",
    "crates/heb",
    "apps/shelltool-cli",
    "apps/code-context-cli",
    "crates/swissarmyhammer-cli-completions",
]
resolver = "2"

[workspace.metadata.release]
publish = false  # Don't auto-publish
shared-version = true          # All crates share the same version
tag-name = "v{{version}}"      # Single tag for workspace
consolidate-commits = true     # One commit for all version bumps

[workspace.package]
version = "0.13.2"
edition = "2021"
rust-version = "1.92"
authors = ["SwissArmyHammer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/swissarmyhammer/swissarmyhammer"
homepage = "https://github.com/swissarmyhammer/swissarmyhammer/blob/main/README.md"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
test-log = {version = "0.2.20" , features = ["trace"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
base64 = "0.22"

# Library core dependencies
liquid = "0.26.11"
liquid-core = "0.26"
walkdir = "2"
dashmap = "6"
indexmap = "2"
regex = "1"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
async-watcher = "0.3"
glob = "0.3"
ignore = "0.4"
ulid = { version = "1.2.1", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
toml = "1.1"
schemars = "0.8"
governor = "0.7"
nonzero_ext = "0.3"

tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-dart = "0.0"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.23"
tree-sitter-zig = "1"
tree-sitter-bash = "0.23"
tree-sitter-fortran = "0.5"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
tree-sitter-sequel = "0.3"
md5 = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fs2 = "0.4"
simsimd = "6"

# CLI specific dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap-markdown = "0.1"
clap_mangen = "0.2"
colored = "2"
owo-colors = "4"
is-terminal = "0.4"
which = "8.0"

rmcp = { version = "1.7", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "auth",
    "elicitation",
    "schemars",
] }
agent-client-protocol = { version = "0.11", features = ["unstable_session_resume"] }
dirs = "6.0"
comfy-table = "7"
crossterm = "0.29"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
arboard = "3.6"
atty = "0.2"
zip = "0.6"
reqwest = { version = "0.13", features = ["json", "stream", "gzip", "cookies", "rustls", "multipart"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
url = "2.5"
indicatif = "0.17"
sha2 = "0.10"
futures-util = "0.3"
tempfile = "3.27"
pathdiff = "0.2"
serial_test = "3.4"
rand = "0.9"
syntect = "5.3"
once_cell = "1.21"
rusqlite = { version = "0.38", features = ["bundled"] }
html2text = "0.16"
bytes = "1.11"
futures = "0.3"

# HTTP server dependencies
axum = "0.7"
tower = "0.5"
tower-http = "0.5"
hyper = "1.9"

# Web fetch dependencies
markdowndown = { path = "crates/markdowndown" }

# Llama-agent dependencies
llama-cpp-2 = { git = "https://github.com/swissarmyhammer/llama-cpp-rs", features = ["metal", "sampler"] }
llama-agent = { path = "crates/llama-agent" }
llama-common = { path = "crates/llama-common" }
llama-embedding = { path = "crates/llama-embedding" }
model-loader = { path = "crates/model-loader" }
model-embedding = { path = "crates/model-embedding" }
ane-embedding = { path = "crates/ane-embedding" }

# Leader election
swissarmyhammer-leader-election = { path = "crates/swissarmyhammer-leader-election" }

# ZMQ for pub/sub bus
zmq = "0.10"

# LSP
swissarmyhammer-lsp = { path = "crates/swissarmyhammer-lsp" }
lsp-types = "0.97"

# Semantic diff
swissarmyhammer-sem = { path = "crates/swissarmyhammer-sem" }

# Operations
swissarmyhammer-operations = { path = "crates/swissarmyhammer-operations" }
swissarmyhammer-operations-macros = { path = "crates/swissarmyhammer-operations-macros" }

# Workspace crate cross-references
agent-client-protocol-extras = { path = "crates/agent-client-protocol-extras" }
avp-common = { path = "crates/avp-common" }
claude-agent = { path = "crates/claude-agent" }
mirdan = { path = "crates/mirdan" }
model-context-protocol-extras = { path = "crates/model-context-protocol-extras" }
swissarmyhammer-agent = { path = "crates/swissarmyhammer-agent" }
swissarmyhammer-agents = { path = "crates/swissarmyhammer-agents" }
swissarmyhammer-build = { path = "crates/swissarmyhammer-build" }
swissarmyhammer-cli-completions = { path = "crates/swissarmyhammer-cli-completions" }
swissarmyhammer-code-context = { path = "crates/swissarmyhammer-code-context" }
swissarmyhammer-commands = { path = "crates/swissarmyhammer-commands" }
swissarmyhammer-common = { path = "crates/swissarmyhammer-common" }
swissarmyhammer-config = { path = "crates/swissarmyhammer-config" }
swissarmyhammer-directory = { path = "crates/swissarmyhammer-directory" }
swissarmyhammer-doctor = { path = "crates/swissarmyhammer-doctor" }
swissarmyhammer-embedding = { path = "crates/swissarmyhammer-embedding" }
swissarmyhammer-entity = { path = "crates/swissarmyhammer-entity" }
swissarmyhammer-entity-search = { path = "crates/swissarmyhammer-entity-search" }
swissarmyhammer-fields = { path = "crates/swissarmyhammer-fields" }
swissarmyhammer-filter-expr = { path = "crates/swissarmyhammer-filter-expr" }
swissarmyhammer-focus = { path = "crates/swissarmyhammer-focus" }
swissarmyhammer-git = { path = "crates/swissarmyhammer-git" }
swissarmyhammer-js = { path = "crates/swissarmyhammer-js" }
swissarmyhammer-kanban = { path = "crates/swissarmyhammer-kanban" }
swissarmyhammer-mcp-proxy = { path = "crates/swissarmyhammer-mcp-proxy" }
swissarmyhammer-merge = { path = "crates/swissarmyhammer-merge" }
swissarmyhammer-modes = { path = "crates/swissarmyhammer-modes" }
swissarmyhammer-perspectives = { path = "crates/swissarmyhammer-perspectives" }
swissarmyhammer-project-detection = { path = "crates/swissarmyhammer-project-detection" }
swissarmyhammer-prompts = { path = "crates/swissarmyhammer-prompts" }
swissarmyhammer-shell = { path = "crates/swissarmyhammer-shell" }
swissarmyhammer-skills = { path = "crates/swissarmyhammer-skills" }
swissarmyhammer-statusline = { path = "crates/swissarmyhammer-statusline" }
swissarmyhammer-store = { path = "crates/swissarmyhammer-store" }
swissarmyhammer-templating = { path = "crates/swissarmyhammer-templating" }
swissarmyhammer-tools = { path = "crates/swissarmyhammer-tools" }
swissarmyhammer-treesitter = { path = "crates/swissarmyhammer-treesitter" }
swissarmyhammer-views = { path = "crates/swissarmyhammer-views" }
swissarmyhammer-web = { path = "crates/swissarmyhammer-web" }
swissarmyhammer = { path = "crates/swissarmyhammer" }
num_cpus = "1.17"
process-wrap = "8.2"
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio", "rustls-tls"] }
jsonschema = "0.28"

# Ripgrep library
grep = "0.4.1"

# Additional common dependencies
libc = "0.2"
encoding_rs = "0.8"
filetime = "0.2"
html2md = "0.2"
html-escape = "0.2"
scraper = "0.25"
urlencoding = "2.1.3"
chromiumoxide = "0.9"

# Additional crate dependencies
infer = "0.16"
typed-builder = "0.20"
nix = { version = "0.29", features = ["signal", "process"] }
include_dir = "0.7"
lru = "0.12"
rquickjs = { version = "0.11", features = ["futures", "loader"] }
diffy = "0.4.2"
similar = "2"
zstd = "0.13"
memmap2 = "0.9"
rayon = "1.12"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
criterion = "0.5"
http = "1.4"
piper = "0.2"
tokio-test = "0.4"
derive_builder = "0.20"
scopeguard = "1.2"
wiremock = "0.6"
mockito = "1.7"
byte-unit = "5.2"
figment = { version = "0.10", features = ["toml", "yaml", "json", "env"] }

# Dev dependencies
assert_cmd = "2.2"
predicates = "3.1"
proptest = "1.11"
sysinfo = "0.38"
rstest = "0.26.1"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

# Profile for faster test compilation
[profile.test]
opt-level = 0       # No optimization for faster compilation
debug = 0           # No debug info for maximum speed
lto = false         # Disable link-time optimization
split-debuginfo = "unpacked"

[profile.dist]
inherits = "release"
lto = true
strip = true
