[package]
name = "acp-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-client-protocol.workspace = true
agent-client-protocol-extras = { path = "../agent-client-protocol-extras" }
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
swissarmyhammer-common = { path = "../swissarmyhammer-common" }

[dev-dependencies]
async-trait.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
test-log.workspace = true
llama-agent = { workspace = true }
claude-agent = { path = "../claude-agent" }
futures.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
piper = { workspace = true }
serial_test.workspace = true
rstest.workspace = true
