[package]
name = "agent-client-protocol-extras"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-client-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "net", "process", "time"] }
tokio-stream.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex.workspace = true
model-context-protocol-extras = { path = "../model-context-protocol-extras" }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }

[dev-dependencies]
avp-common = { path = "../avp-common" }
tempfile.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "net", "process", "time", "macros"] }

[lints]
workspace = true
