[package]
name = "agent-client-protocol-extras"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agent-client-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
rmcp.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "net", "process", "time"] }
tokio-stream.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
model-context-protocol-extras = { workspace = true }
swissarmyhammer-common = { workspace = true }

[dev-dependencies]
# `avp-common` is the workspace's validator/fixture library — used by the
# `tests/e2e_hooks/*` integration test suite (sibling task A5). It depends
# transitively on `claude-agent` and `llama-agent`, which do not yet
# compile under ACP 0.11. The dep is omitted while the foundation lands;
# task A5 will re-add it when migrating the e2e_hooks suite.
tempfile.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "net", "process", "time", "macros"] }

[lints]
workspace = true
