[package]
name = "avp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent Validator Protocol - Claude Code hook processor CLI"

[lib]
name = "avp"
path = "src/lib.rs"

[[bin]]
name = "avp"
path = "src/main.rs"

[dependencies]
# Core library
avp-common = { path = "../avp-common" }

# Shared doctor infrastructure
swissarmyhammer-doctor = { path = "../swissarmyhammer-doctor" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Table display
comfy-table = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system
dirs = { workspace = true }

# Git detection
swissarmyhammer-common = { path = "../swissarmyhammer-common" }

# Authentication
axum = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

# Package management
zip = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
