[package]
name = "avp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent Validator Protocol - Claude Code hook processor CLI"

[lib]
name = "avp"
path = "src/lib.rs"

[[bin]]
name = "avp"
path = "src/main.rs"

[dependencies]
# Core library
avp-common = { path = "../avp-common" }

# Shared doctor infrastructure
swissarmyhammer-doctor = { path = "../swissarmyhammer-doctor" }

# Serialization
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system
dirs = { workspace = true }

# Git detection
swissarmyhammer-common = { path = "../swissarmyhammer-common" }

[build-dependencies]
clap = { workspace = true }
clap-markdown = { workspace = true }
clap_mangen = { workspace = true }
clap_complete = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
