[package]
name = "avp-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Validator Protocol - Core library for hook processing"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { workspace = true }

# Error handling
thiserror = "1"

# Time
chrono = { workspace = true }

# Pattern matching
glob = { workspace = true }
regex = { workspace = true }

# Logging
tracing = { workspace = true }

# File system traversal
walkdir = { workspace = true }

# Git root finding and directory management
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
swissarmyhammer-directory = { path = "../swissarmyhammer-directory" }

# Prompts and templating for validator execution
swissarmyhammer-config = { path = "../swissarmyhammer-config" }
swissarmyhammer-prompts = { path = "../swissarmyhammer-prompts" }

# ACP agent execution for validators
swissarmyhammer-agent = { path = "../swissarmyhammer-agent" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# CLI detection
which = { workspace = true }

[build-dependencies]
swissarmyhammer-build = { path = "../swissarmyhammer-build" }

[dev-dependencies]
tempfile = "3"
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
agent-client-protocol-extras = { path = "../agent-client-protocol-extras" }
