[package]
name = "avp-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Validator Protocol - Core library for hook processing"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Pattern matching
glob = { workspace = true }
regex = { workspace = true }

# Logging
tracing = { workspace = true }

# File system traversal
walkdir = { workspace = true }

# File hashing and locking
sha2 = { workspace = true }
fs2 = { workspace = true }

# Git root finding and directory management
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
swissarmyhammer-directory = { path = "../swissarmyhammer-directory" }

# Prompts and templating for validator execution
swissarmyhammer-prompts = { path = "../swissarmyhammer-prompts" }
swissarmyhammer-config = { path = "../swissarmyhammer-config" }
swissarmyhammer-templating = { path = "../swissarmyhammer-templating" }

# Claude agent for validator execution
claude-agent = { path = "../claude-agent" }
agent-client-protocol = { workspace = true }
uuid = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }

# CLI detection
which = { workspace = true }

[build-dependencies]
swissarmyhammer-build = { path = "../swissarmyhammer-build" }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
agent-client-protocol-extras = { path = "../agent-client-protocol-extras" }
